test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/stringconstants.widl
interface Util {
  const DOMString hello = "world";
};